// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/Transcript/TranscriptRow should correctly render with time 1`] = `
<PlainButton
  className="be-transcript-row"
  type="button"
>
  <div
    className="be-transcript-time"
  >
    123
  </div>
  <div
    className="be-transcript-text"
  />
</PlainButton>
`;

exports[`elements/content-sidebar/Skills/Transcript/TranscriptRow should correctly render without time 1`] = `
<PlainButton
  className="be-transcript-row"
  type="button"
>
  <div
    className="be-transcript-text"
  />
</PlainButton>
`;
